--- a/portfolio.html
+++ b/portfolio.html
@@ -302,18 +302,20 @@
         </div>
 
         <div class="mailing-list">
-        <form  class="mailing-form"> 
-          <label for="mail"
-            >Підпишись на розсилку</label>
+          <form class="mailing-form">
+            <label for="mail">Підпишись на розсилку</label>
             <div class="mailing">
-            <input class="mailing-input" type="mail" id="mail" placeholder="Email"/>
+              <input class="mailing-input" type="Email" id="Email" placeholder="Email" />
+
+              <button class="btn-mailing" type="submit">
+                Підписатись
+                <svg class="icons-mailing">
+                  <use href="./images/icons/symbol6.svg#icon-icon-telegram"></use>
+                </svg>
+              </button>
+            </div>
           </form>
-        <button class="btn-mailing" type="submit">Підписатись
-          <svg class="icons-mailing" > 
-          <use href="./images/icons/symbol6.svg#icon-icon-telegram" width="24" heigth="24"></use>
-        </svg></button>
         </div>
-      </div>
       </div>
     </footer>
   </body>
