правки після перевірки1

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 
         <div class="mailing-list">
           <form class="mailing-form">
-            <label for="mail">Підпишись на розсилку</label>
+            <label for="Email">Підпишись на розсилку</label>
             <div class="mailing">
               <input class="mailing-input" type="Email" id="Email" placeholder="Email" />
 
